--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -23,7 +23,8 @@
             <nav class="navbar navbar-expand-lg navbar-light border mt-2 static-top">
                 <a class="navbar-brand" href="#"><img class="header__logo-image" loading="lazy"
                                                       src="https://www.marimekko.com/static/version1637055171/frontend/Improove/marimekko2/fi_FI/images/logo.svg"
-                                                      alt="" width="170" style="margin-bottom: 8px;"> <span style="margin-left: 5px; font-weight: lighter;">Swap</span></a>
+                                                      alt="" width="170" style="margin-bottom: 8px;"> <span
+                        style="margin-left: 5px; font-weight: lighter;">Swap</span></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -38,40 +39,43 @@
                     </ul>
                 </div>
             </nav>
-            <div class="row">
-                <div class="col-md-6">
-                    <span class="h3 text-left">
-                        Now I wear
-                    </span>
-                    <span class="text-muted text-right">Until 30 November</span>
+            <div class="m-2">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3 class="card-title">Current items</h3>
+                                <h5 class="card-subtitle mb-2 text-muted">Until 30 November</h5>
+                                <div th:each="currentItem : ${profile.currentItems}" class="row p-2">
+                                    <div class="col-md-3">
+                                        <img class="img-thumbnail" th:src="${currentItem.item.pictureUrl}">
+                                    </div>
+                                    <div class="col-md-9">
+                                        <h3 th:text="${currentItem.item.name}">
 
-
-                    <div th:each="currentItem : ${profile.currentItems}" class="row p-2">
-                        <div class="col-md-3">
-                            <img alt="Bootstrap Image Preview"
-                                 src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
-                        </div>
-                        <div class="col-md-9">
-                            <h3 th:text="${currentItem.item.name}">
-
-                            </h3>
+                                        </h3>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <h3>
-                        Booked
-                    </h3>
-                    <div th:each="currentItem : ${profile.bookedItems}" class="row p-2">
-                        <div class="col-md-3">
-                            <img alt="Bootstrap Image Preview"
-                                 src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
+                    <div class="col-md-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3 class="card-title">Booked items</h3>
+                                <div th:each="bookedItem : ${profile.bookedItems}" class="row p-2">
+                                    <div class="col-md-3">
+                                        <img class="img-thumbnail" th:src="${bookedItem.item.pictureUrl}">
+                                    </div>
+                                    <div class="col-md-9">
+                                        <h3 th:text="${bookedItem.item.name}"></h3>
+                                        <p class="text-muted"
+                                           th:text="'Pick up from ' + ${@viewUtil.toFirstDayOfMonth(bookedItem.monthOfUsage)}">Pick up at </p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-md-9">
-                            <h3 th:text="${currentItem.item.name}">
 
-                            </h3>
-                        </div>
                     </div>
                 </div>
             </div>
