--- a/src/main/resources/templates/own-items.html
+++ b/src/main/resources/templates/own-items.html
@@ -73,7 +73,7 @@
                              alt=""/>
                         <div class="caption card-body">
                             <h4 class="group card-title inner list-group-item-heading"
-                                th:text="${item.name} + ', ' + ${item.itemSize}"></h4>
+                                th:text="${item.name} + (${item.itemSize.equals('One size')} ? '' : ', ' + ${item.itemSize})"></h4>
                             <div class="row w-100">
                                 <div class="col-xs-12 col-md-12">
                                     <a class="btn btn-dark" href="http://www.jquery2dotnet.com">Get it back</a>
