--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -75,6 +75,7 @@
                                     <div class="form-group">
                                         <select th:field=*{filters.itemType} title="Category" data-width="100%" name="category"
                                                 class="form-control selectpicker">
+                                            <option th:value="null">All</option>
                                             <option th:value="CLOTHING">Clothing</option>
                                             <option th:value="BAGS">Bags</option>
                                             <option th:value="ACCESSORIES">Accessories</option>
