--- a/src/main/resources/templates/own-items.html
+++ b/src/main/resources/templates/own-items.html
@@ -26,11 +26,34 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css"/>
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script>
         $(document).ready(function () {
             $('.selectpicker').selectpicker();
         })
+
+        function getBack() {
+
+            fetch("http://localhost:8080/get-back", {
+                method: "POST",
+                headers: {'Content-Type': 'application/json'}
+            }).then(res => {
+                console.log(res)
+                Swal.fire({
+                    title: 'Ok :(',
+                    text: 'We marked this as got back. The queue for this item will be declined. You can get it back next month in the nearest Marimekko Swap point.',
+                    icon: 'info',
+                    iconColor: '#000',
+                    confirmButtonColor: '#000',
+                    confirmButtonText: 'Ok',
+                    preConfirm: () => {
+                        location.reload();
+                    }
+                })
+            });
+        }
     </script>
 
 </head>
@@ -40,10 +63,21 @@
     <div class="row">
         <div class="col-12">
             <nav class="navbar navbar-expand-lg navbar-light border mt-2 static-top">
-                <a class="navbar-brand" href="#"><img class="header__logo-image" loading="lazy"
-                                                      src="https://www.marimekko.com/static/version1637055171/frontend/Improove/marimekko2/fi_FI/images/logo.svg"
-                                                      alt="" width="170" style="margin-bottom: 8px;"> <span
-                        style="margin-left: 5px; font-weight: lighter;">Swap</span></a>
+                <a class="d-none d-lg-block navbar-brand" href="#"><img class="header__logo-image" loading="lazy"
+                                                                        src="https://www.marimekko.com/static/version1637055171/frontend/Improove/marimekko2/fi_FI/images/logo.svg"
+                                                                        alt="" width="170" style="margin-bottom: 8px;">
+                    <span
+                            style="margin-left: 5px; font-weight: lighter;">Swap</span></a>
+                <div class="d-sm-block d-lg-none">
+                    <div class="float-left">
+                        <a th:href="@{/profile}" class="text-dark h3"><i class="bi bi-person"></i></a>
+                    </div>
+                    <div class="float-left ml-3">
+                        <a th:href="@{/own-clothes}" class="text-dark"><img width="38px"
+                                                                            th:src="@{/mlogo.jpeg}"></i>
+                        </a><span style="margin-left: 5px; font-weight: bold" th:text="${user.flowers}"></span>
+                    </div>
+                </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +90,19 @@
                             <a class="nav-link" th:href="@{/explore}">Explore</a>
                         </li>
                     </ul>
+                    <div class="d-none d-lg-inline">
+                        <div class="float-left">
+                            <a th:href="@{/profile}" class="text-dark h3"><i class="bi bi-person"></i></a>
+                        </div>
+                        <div class="float-left ml-3">
+                            <a th:href="@{/own-clothes}" class="text-dark"><img width="38px"
+                                                                                th:src="@{/mlogo.jpeg}"></i>
+                            </a><span style="margin-left: 5px; font-weight: bold" th:text="${user.flowers}"></span>
+                        </div>
+                    </div>
                 </div>
+
+
             </nav>
             <!--   CONTENT   -->
             <div class="row mt-3">
@@ -76,7 +122,7 @@
                                 th:text="${item.name} + (${item.itemSize.equals('One size')} ? '' : ', ' + ${item.itemSize})"></h4>
                             <div class="row w-100">
                                 <div class="col-xs-12 col-md-12">
-                                    <a class="btn btn-dark" href="http://www.jquery2dotnet.com">Get it back</a>
+                                    <button class="btn btn-dark" onclick="getBack()">Get it back</button>
                                 </div>
                             </div>
                         </div>
