--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -172,11 +172,15 @@
                             <h4 class="group card-title inner list-group-item-heading" th:text="${item.item.name} + (${item.item.itemSize.equals('One size')} ? '' : ', ' + ${item.item.itemSize})"></h4>
                             <p class="group cart-subtitle text-muted"
                                th:text="'Available on ' + ${@viewUtil.toMonth(item.availableMonth)}">Available on</p>
+                            <a class="text-dark" target="_blank"
+                               th:href="'http://maps.google.com/maps?z=12&t=m&q=loc:' + ${item.item.location.lat} + '+' + ${item.item.location.lng}">
+                                <i class="bi bi-geo-alt"></i> Pick up at <span
+                                    th:text="${item.item.location.locationName}"></span></a>
                             <div class="row w-100">
                                 <!--                                    <div class="col-xs-12 col-md-6">-->
                                 <!--                                        <p class="lead">Can be </p>-->
                                 <!--                                    </div>-->
-                                <div class="col-xs-12 col-md-12">
+                                <div class="col-xs-12 col-md-12 mt-3">
                                     <button class="btn btn-dark" th:onClick="'book(' + ${item.item.id} + ', this)'">Book</button>
                                 </div>
                             </div>
