data and fix some bugs

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -81,3 +81,7 @@
     min-height: 38px;
     border: 1px solid #ced4da
 }
+
+a, a:hover,a:visited, a:focus {
+    text-decoration:none!important;
+}
