--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -7,9 +7,6 @@
 
     <title>Marimekko Swap</title>
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
@@ -55,7 +52,7 @@
     <div class="row">
         <div class="col-12">
             <nav class="navbar navbar-expand-lg navbar-light border mt-2 static-top">
-                <a class="d-none d-lg-block navbar-brand" href="#"><img class="header__logo-image" loading="lazy"
+                <a class="d-none d-lg-block navbar-brand" th:href="@{/}"><img class="header__logo-image" loading="lazy"
                                                                         src="https://www.marimekko.com/static/version1637055171/frontend/Improove/marimekko2/fi_FI/images/logo.svg"
                                                                         alt="" width="170" style="margin-bottom: 8px;">
                     <span
@@ -171,10 +168,10 @@
                         <div class="caption card-body">
                             <h4 class="group card-title inner list-group-item-heading" th:text="${item.item.name} + (${item.item.itemSize.equals('One size')} ? '' : ', ' + ${item.item.itemSize})"></h4>
                             <p class="group cart-subtitle text-muted"
-                               th:text="'Available on ' + ${@viewUtil.toMonth(item.availableMonth)}">Available on</p>
+                               th:text="'Available in ' + ${@viewUtil.toMonth(item.availableMonth)}">Available in</p>
                             <a class="text-dark" target="_blank"
                                th:href="'http://maps.google.com/maps?z=12&t=m&q=loc:' + ${item.item.location.lat} + '+' + ${item.item.location.lng}">
-                                <i class="bi bi-geo-alt"></i> Pick up at <span
+                                <i class="bi bi-geo-alt"></i> at <span
                                     th:text="${item.item.location.locationName}"></span></a>
                             <div class="row w-100">
                                 <!--                                    <div class="col-xs-12 col-md-6">-->
