--- a/src/main/resources/templates/own-items.html
+++ b/src/main/resources/templates/own-items.html
@@ -7,9 +7,6 @@
 
     <title>Marimekko Swap</title>
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
@@ -63,7 +60,7 @@
     <div class="row">
         <div class="col-12">
             <nav class="navbar navbar-expand-lg navbar-light border mt-2 static-top">
-                <a class="d-none d-lg-block navbar-brand" href="#"><img class="header__logo-image" loading="lazy"
+                <a class="d-none d-lg-block navbar-brand" th:href="@{/}"><img class="header__logo-image" loading="lazy"
                                                                         src="https://www.marimekko.com/static/version1637055171/frontend/Improove/marimekko2/fi_FI/images/logo.svg"
                                                                         alt="" width="170" style="margin-bottom: 8px;">
                     <span
