--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -7,9 +7,6 @@
 
     <title>Marimekko Swap</title>
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -23,7 +20,7 @@
     <div class="row">
         <div class="col-md-12">
             <nav class="navbar navbar-expand-lg navbar-light border mt-2 static-top">
-                <a class="d-none d-lg-block navbar-brand" href="#"><img class="header__logo-image" loading="lazy"
+                <a class="d-none d-lg-block navbar-brand" th:href="@{/}"><img class="header__logo-image" loading="lazy"
                                                                         src="https://www.marimekko.com/static/version1637055171/frontend/Improove/marimekko2/fi_FI/images/logo.svg"
                                                                         alt="" width="170" style="margin-bottom: 8px;">
                     <span
@@ -79,7 +76,7 @@
                                         </p>
                                         <a class="text-dark" target="_blank"
                                            th:href="'http://maps.google.com/maps?z=12&t=m&q=loc:' + ${bookedItem.location.lat} + '+' + ${bookedItem.location.lng}">
-                                            <i class="bi bi-geo-alt"></i> Pick up at <span
+                                            <i class="bi bi-geo-alt"></i> at <span
                                                 th:text="${bookedItem.location.locationName}"></span></a>
                                     </div>
                                 </div>
