--- a/src/main/resources/templates/own-items.html
+++ b/src/main/resources/templates/own-items.html
@@ -33,7 +33,7 @@
 
         function getBack() {
 
-            fetch("http://localhost:8080/get-back", {
+            fetch("https://marimekko-swap.herokuapp.com/get-back", {
                 method: "POST",
                 headers: {'Content-Type': 'application/json'}
             }).then(res => {
