--- a/src/main/resources/templates/own-items.html
+++ b/src/main/resources/templates/own-items.html
@@ -61,12 +61,15 @@
         <div class="col-12">
             <nav class="navbar navbar-expand-lg navbar-light border mt-2 static-top">
                 <a class="d-none d-lg-block navbar-brand" th:href="@{/}"><img class="header__logo-image" loading="lazy"
-                                                                        src="https://www.marimekko.com/static/version1637055171/frontend/Improove/marimekko2/fi_FI/images/logo.svg"
-                                                                        alt="" width="170" style="margin-bottom: 8px;">
+                                                                              src="https://www.marimekko.com/static/version1637055171/frontend/Improove/marimekko2/fi_FI/images/logo.svg"
+                                                                              alt="" width="170" style="margin-bottom: 8px;">
                     <span
                             style="margin-left: 5px; font-weight: lighter;">Swap</span></a>
                 <div class="d-sm-block d-lg-none">
                     <div class="float-left">
+                        <a th:href="@{/explore}" class="text-dark h3"><i class="bi bi-bag"></i></a>
+                    </div>
+                    <div class="float-left ml-3">
                         <a th:href="@{/profile}" class="text-dark h3"><i class="bi bi-person"></i></a>
                     </div>
                     <div class="float-left ml-3">
@@ -98,8 +101,6 @@
                         </div>
                     </div>
                 </div>
-
-
             </nav>
             <!--   CONTENT   -->
             <div class="row mt-3">
