--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -27,6 +27,9 @@
                             style="margin-left: 5px; font-weight: lighter;">Swap</span></a>
                 <div class="d-sm-block d-lg-none">
                     <div class="float-left">
+                        <a th:href="@{/explore}" class="text-dark h3"><i class="bi bi-bag"></i></a>
+                    </div>
+                    <div class="float-left ml-3">
                         <a th:href="@{/profile}" class="text-dark h3"><i class="bi bi-person"></i></a>
                     </div>
                     <div class="float-left ml-3">
